force-app/main/default/objects/Report_Finder_Job_Function_Filter__c/Report_Finder_Job_Function_Filter__c.object-meta.xml
<CustomObject>
    <label>Report Finder Job Function Filter</label>
    <nameField>
        <displayFormat>RFJBF-{0}</displayFormat>
        <label>Job Function Filter #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Job Function Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>