force-app/main/default/objects/Report_Finder_Job_Function_Filter__c/fields/Advancement_Report__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Report__c</fullName>
    <label>Advancement Report</label>
    <referenceTo>Advancement_Report__c</referenceTo>
    <relationshipLabel>Report Finder Job Function Filters</relationshipLabel>
    <relationshipName>Report_Finder_Job_Function_Filter</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>