force-app/main/default/objects/Report_Finder_Job_Function_Filter__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <referenceTo>Report_Finder_Job_Function__c</referenceTo>
    <relationshipLabel>Report Finder Job Function Filters</relationshipLabel>
    <relationshipName>Report_Finder_Job_Function_Filter</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>